@@ -1,26 +1,8 @@
-install (FILES kmetronome_16.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/16x16/apps
-         RENAME kmetronome.png)
+foreach(S IN ITEMS 48 64 128 256 512)
+    install (FILES kmetronome_${S}.png
+             DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/${S}x${S}/apps
+             RENAME kmetronome.png)
+endforeach()
 
-install (FILES kmetronome_24.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/24x24/apps
-         RENAME kmetronome.png)
-
-install (FILES kmetronome_32.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/32x32/apps
-         RENAME kmetronome.png)
-
-install (FILES kmetronome_48.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/48x48/apps
-         RENAME kmetronome.png)
-
-install (FILES kmetronome_64.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/64x64/apps
-         RENAME kmetronome.png)
-
-install (FILES kmetronome_128.png
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/128x128/apps
-         RENAME kmetronome.png)
-
-install (FILES kmetronome.svgz
-         DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps )
+install ( FILES kmetronome.svgz
+          DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps )
