@@ -1,3 +1,6 @@
+2021-09-25
+    * desktop icons replaced
+
 2021-04-23
     * added action icons: internal theme based on breeze
     * new settings: qt style, dark mode, and internal icon theme
